--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "css-loader": "^0.23.1",
     "exports-loader": "0.6.2",
     "expose-loader": "0.7.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
@@ -82,14 +82,12 @@
     "typescript": "^1.8.10",
     "typings": "1.3.0",
     "url-loader": "0.5.6",
-    "val-loader": "0.5.0",
-    "webpack": "^2.1.0-beta.20",
+    "webpack": "^1.13.0",
     "webpack-dev-middleware": "1.0.7",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
     "webpack-notifier": "1.2.1",
     "webpack-reload-plugin": "0.1.2",
-    "worker-loader": "^0.6.0",
 
     "express": "^4.14.0",
     "compression": "^1.6.2",
