--- a/package.json
+++ b/package.json
@@ -3,97 +3,75 @@
   "version": "1.0.0",
   "description": "A webpack starter for angular 2",
   "scripts": {
-    "start": "webpack-dev-server --content-base src --inline --progress --port 8080",
+    "start": "webpack-dev-server --content-base src --inline --progress --port 9000",
     "test": "karma start",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "postinstall": "typings install"
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "angular2": "latest",
-    "angular2-in-memory-web-api": "0.0.15",
-    "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
-    "es6-shim": "^0.35.1",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "0.6.12"
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@angular/upgrade": "~2.1.0",
+
+    "angular-in-memory-web-api": "~0.1.5",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25",
+    "es6-shim": "^0.35.1"
   },
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "concurrently": "^2.0.0",
     "connect-modrewrite": "^0.9.0",
-    "css-loader": "^0.23.1",
     "exports-loader": "0.6.2",
     "expose-loader": "0.7.1",
-    "extract-text-webpack-plugin": "2.0.0-beta.3",
-    "file-loader": "^0.8.5",
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^2.0.0",
-    "grunt-cli": "0.1.13",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compress": "0.12.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.12.0",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.11.0",
-    "grunt-contrib-less": "0.12.0",
-    "grunt-contrib-uglify": "^0.7.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-ng-annotate": "1.0.1",
-    "grunt-ngdocs": "^0.2.10",
-    "grunt-webpack": "~1.0.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
     "imports-loader": "0.6.4",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-jasmine": "^0.3.8",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
     "less": "^1.7.5",
     "less-loader": "^0.7.8",
     "load-grunt-tasks": "^3.5.0",
+    "script-loader": "0.6.1",
+    "traceur-loader": "0.6.3",
+    "ts-loader": "0.8.2",
+    "tslint-loader": "1.0.1",
+    "url-loader": "0.5.6",
+    "val-loader": "0.5.0",
+    "webpack-dev-middleware": "1.0.7",
+    "webpack-notifier": "1.2.1",
+    "webpack-reload-plugin": "0.1.2",
+    "worker-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
-    "script-loader": "0.6.1",
     "style-loader": "^0.13.1",
-    "traceur-loader": "0.6.3",
-    "ts-loader": "0.8.2",
-    "tslint-loader": "1.0.1",
-    "typescript": "^1.8.10",
-    "typings": "1.3.0",
-    "url-loader": "0.5.6",
-    "val-loader": "0.5.0",
-    "webpack": "^2.1.0-beta.20",
-    "webpack-dev-middleware": "1.0.7",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "webpack-merge": "^0.14.0",
-    "webpack-notifier": "1.2.1",
-    "webpack-reload-plugin": "0.1.2",
-    "worker-loader": "^0.6.0",
-
     "express": "^4.14.0",
-    "compression": "^1.6.2",
-    "open": "0.0.5",
-    "path": "^0.12.7"
+    "compression": "^1.6.2"
   }
 }
