--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "angular2-webpack",
   "version": "1.0.0",
   "description": "A webpack starter for angular 2",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "start": "webpack-dev-server --content-base src --inline --progress --port 9000",
     "test": "karma start",
